
2006-10-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, src/gnome_ui.c, src/gnome_frame.c,
		src/gnome_options.c, debian: control, files, changelog, rules:
		Version bump and elimination of libgnome dependency. Also
		added yelp as a suggested package for debian package
	* doc/man: C/Makefile.am, de/Makefile.am: added po/pot to EXTRA_DIST
	* doc/man/de/xvidcap.1-de.xml: removed (xvidcap.1.xml everywhere)
	* doc/xvidcap: C/xvidcap.xml, de/xvidcap-de.po: continued
		German translation of user guide and minor fixes to C original
	* src/gnome_ui.c: added shortcut STRG-H for help because the stock
		menu item shows that

2006-10-09  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man: man.make, C/Makefile.am, de/Makefile.am, it/Makefile.am:
		make target encoding of manpage configurable per lang
	* doc/man: man.make, C/xvidcap.1.xml.pot, de/xvidcap.1-de.po:
		use xml2po rather than po4a
	* doc/xvidcap: C/xvidcap.xml.pot, de/xvidcap-de.po: initial 
		preparation for user-guide translation

2006-10-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* configure.in, doc/man: C/xvidcap.1, man.make, de/xvidcap.1.xml:
		integration of po4a to make translation of documentation
		more maintainable

2006-10-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man: C/xvidcap.1.xml, C/xvidcap.1, de/xvidcap.1.xml, 
		de/xvidcap.1: German translation of manpage and minor
		corrections of the English version
		
2006-10-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man: man.make, it/xvidcap.1.xml, it/xvidcap.1, de/xvidcap.1.xml,
		C/xvidcap.1.xml: changed encoding 
		back to ISO_8859-1 because man is in trouble otherwise. Will
		need to find a permanent fix when Asian languages come up.

2006-10-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/man/C/xvidcap.1.xml, doc/man/de/xvidcap.1.xml, 
		doc/man/it/xvidcap.1.xml: corrected encoding specification
		to UTF-8

2006-10-02  Vincenzo Reale <smart2128@baslug.org>
	* doc/man/it/xvidcap.1.xml: Italian manpage
