@@ -434,6 +434,7 @@ doc/man/C/Makefile
 doc/man/de/Makefile
 doc/man/it/Makefile
 po/Makefile.in
+debian/Makefile
 src/Makefile
 Makefile
 ])
